[project]
name = "iq_capture"
version = "0.0.0"
authors = [{name = "Tom Schmitz", email = "tschmitz@andrew.cmu.edu"}]
description = "IQ data capture CLI"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "typer",
    "numpy<2.0.0",
    "mako",
    "requests",
    "distro",
]

[project.scripts]
iq-capture = "iq_capture.app.main:main"

[build-system]
requires = ["setuptools>=61.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

#[tool.setuptools.package.find]
#where = ["src"]

[tool.setuptools.package-data]
"iq_capture.app.signal_hound.bbdevice.lib" = ["**/*.so"]
"iq_capture.app.signal_hound.smdevice.lib" = ["**/*.so"]
