[project]
name = "iq_capture"
version = "0.0.0"
authors = [{name = "Tom Schmitz", email = "tschmitz@andrew.cmu.edu"}]
description = "IQ data capture CLI"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "typer",
    "numpy<2.0.0",
    "mako",
    "requests",
    "distro",
    "jax",
]

[project.scripts]
iq-capture = "iq_capture.app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
